 * Remove omxil_vout plugin
 * Remove RealRTSP plugin
 * Remove Real demuxer plugin

Video filter:
 * Update yadif

Stream output:
 * New SDI output with improved audio and ancillary support.
   Candidate for deprecation of decklink vout/aout modules.
 * Support for DLNA/UPNP renderers

Service discovery:
 * Support Renderer discovery with avahi

macOS:
 * Remove Growl notification support

appleOS:
 * Improved proxy configuration handling


Changes between 3.0.6 and 3.0.7:
--------------------------------

Access:
 * Improve Blu-ray support

Audio output:
 * Fix pass-through on Android-23

Video Output:
 * Fix 12 bits sources playback with Direct3D11
 * Fix crash on iOS

Stream Output:
 * Improve Chromecast support with new ChromeCast apps

Misc:
 * Update Youtube, Dailymotion, Vimeo scripts


Changes between 3.0.5 and 3.0.6:
--------------------------------

Core:
 * Fix potential subtitle picture allocation failures

Codec:
 * Add support for 12 bits decoding of AV1
 * Fix HDR support in AV1 when the container provides the metadata


Changes between 3.0.4 and 3.0.5:
--------------------------------

Access:
 * Improve RTSP playback
 * BluRay fixes and improvements, notably for menus and seeking
 * Improve the UDP/RTP truncated issue

Codec:
 * Add a new AV1 decoder based on dav1d library
 * Enable libaom decoder by default
 * Fix decoding of some HEVC streams with macOS hardware decoding

Demux:
 * MP4: Fix reading of some HDR metadata
 * Miscellaneous AV1 demuxing improvements
 * Fix CAF integer-underflow
 * Fix an MKV crash on iOS 12.0, on iPhone XS phones

Packetizer:
 * Add an AV1 packetizer

macOS:
 * Starting with VLC 3.0.5, VLC will be distributed with runtime hardening
   enabled on macOS Mojave.
   All external VLC plugins need to be signed by a DeveloperID certificate in order
   to continue working with the official VLC package.
 * Update the VLC dark UI to better match the dark mode of macOS Mojave
 * Fix convert & save panel stream option
