@@ -43,9 +43,15 @@
 @property (readwrite) float audioVolume;
 @property (readwrite) long long audioDesync;
 @property (readwrite) int currentTime;
+@property (readwrite) float playbackRate;
 @property (readonly) NSInteger durationOfCurrentItem;
 @property (readonly) NSString *pathOfCurrentItem;
 @property (readonly) NSString *nameOfCurrentItem;
 @property (readonly) BOOL playbackShowsMenu;
+@property (readonly) BOOL recordable;
+@property (readwrite) BOOL recordingEnabled;
+@property (readwrite) BOOL shuffledPlayback;
+@property (readwrite) BOOL repeatOne;
+@property (readwrite) BOOL repeatAll;
 
 @end
